Ajout des elements pour les Regions
